[package]
name = "chainx-service"
version = "5.2.1"
authors = ["The ChainX Authors"]
edition = "2021"

[dependencies]
futures = "0.3.17"

# Substrate client
sc-authority-discovery = { git = "https://github.com/chainx-org/substrate", branch = "polkadot-v0.9.18-fix" }
sc-basic-authorship = { git = "https://github.com/chainx-org/substrate", branch = "polkadot-v0.9.18-fix" }
sc-chain-spec = { git = "https://github.com/chainx-org/substrate", branch = "polkadot-v0.9.18-fix" }
sc-client-api = { git = "https://github.com/chainx-org/substrate", branch = "polkadot-v0.9.18-fix" }
sc-consensus = { git = "https://github.com/chainx-org/substrate", branch = "polkadot-v0.9.18-fix" }
sc-consensus-babe = { git = "https://github.com/chainx-org/substrate", branch = "polkadot-v0.9.18-fix" }
sc-consensus-slots = { git = "https://github.com/chainx-org/substrate", branch = "polkadot-v0.9.18-fix" }
sc-consensus-uncles = { git = "https://github.com/chainx-org/substrate", branch = "polkadot-v0.9.18-fix" }
sc-executor = { git = "https://github.com/chainx-org/substrate", branch = "polkadot-v0.9.18-fix" }
sc-finality-grandpa = { git = "https://github.com/chainx-org/substrate", branch = "polkadot-v0.9.18-fix" }
sc-network = { git = "https://github.com/chainx-org/substrate", branch = "polkadot-v0.9.18-fix" }
sc-rpc = { git = "https://github.com/chainx-org/substrate", branch = "polkadot-v0.9.18-fix" }
sc-transaction-pool = { git = "https://github.com/chainx-org/substrate", branch = "polkadot-v0.9.18-fix" }
sc-telemetry = { git = "https://github.com/chainx-org/substrate", branch = "polkadot-v0.9.18-fix" }
sc-service = { git = "https://github.com/chainx-org/substrate", branch = "polkadot-v0.9.18-fix" }

sp-api = { git = "https://github.com/chainx-org/substrate", branch = "polkadot-v0.9.18-fix" }
sp-authorship = { git = "https://github.com/chainx-org/substrate", branch = "polkadot-v0.9.18-fix" }
sp-authority-discovery = { git = "https://github.com/chainx-org/substrate", branch = "polkadot-v0.9.18-fix" }
sp-blockchain = { git = "https://github.com/chainx-org/substrate", branch = "polkadot-v0.9.18-fix" }
sp-block-builder = { git = "https://github.com/chainx-org/substrate", branch = "polkadot-v0.9.18-fix" }
sp-core = { git = "https://github.com/chainx-org/substrate", branch = "polkadot-v0.9.18-fix" }
sp-consensus = { git = "https://github.com/chainx-org/substrate", branch = "polkadot-v0.9.18-fix" }
sp-consensus-babe = { git = "https://github.com/chainx-org/substrate", branch = "polkadot-v0.9.18-fix" }
sp-finality-grandpa = { git = "https://github.com/chainx-org/substrate", branch = "polkadot-v0.9.18-fix" }
sp-inherents = { git = "https://github.com/chainx-org/substrate", branch = "polkadot-v0.9.18-fix" }
sp-runtime = { git = "https://github.com/chainx-org/substrate", branch = "polkadot-v0.9.18-fix" }
sp-timestamp = { git = "https://github.com/chainx-org/substrate", branch = "polkadot-v0.9.18-fix" }
sp-transaction-pool = { git = "https://github.com/chainx-org/substrate", branch = "polkadot-v0.9.18-fix" }
sp-offchain = { git = "https://github.com/chainx-org/substrate", branch = "polkadot-v0.9.18-fix" }
sp-session = { git = "https://github.com/chainx-org/substrate", branch = "polkadot-v0.9.18-fix" }

frame-system-rpc-runtime-api = { git = "https://github.com/chainx-org/substrate", branch = "polkadot-v0.9.18-fix" }
pallet-transaction-payment-rpc-runtime-api = { git = "https://github.com/chainx-org/substrate", branch = "polkadot-v0.9.18-fix" }

chainx-executor = { path = "../executor" }
chainx-primitives = { path = "../primitives" }
chainx-rpc = { path = "../rpc" }
chainx-runtime = { path = "../runtime/chainx" }
dev-runtime = { path = "../runtime/dev" }
malan-runtime = { path = "../runtime/malan" }

xpallet-assets-rpc-runtime-api = { path = "../xpallets/assets/rpc/runtime-api" }
xpallet-dex-spot-rpc-runtime-api = { path = "../xpallets/dex/spot/rpc/runtime-api" }
xpallet-gateway-bitcoin-rpc-runtime-api = { path = "../xpallets/gateway/bitcoin/rpc/runtime-api" }
xpallet-gateway-common-rpc-runtime-api = { path = "../xpallets/gateway/common/rpc/runtime-api" }
xpallet-gateway-records-rpc-runtime-api = { path = "../xpallets/gateway/records/rpc/runtime-api" }
xpallet-mining-asset-rpc-runtime-api = { path = "../xpallets/mining/asset/rpc/runtime-api" }
xpallet-mining-staking-rpc-runtime-api = { path = "../xpallets/mining/staking/rpc/runtime-api" }
xpallet-transaction-fee-rpc-runtime-api = { path = "../xpallets/transaction-fee/rpc/runtime-api" }
xpallet-btc-ledger-runtime-api = { path = "../xpallets/btc-ledger/rpc/runtime-api" }

# EVM
maplit = "1.0.2"
jsonrpc-pubsub = "18.0.0"
fc-rpc = { git = "https://github.com/chainx-org/frontier", branch = "polkadot-v0.9.18-btc-fix", features = ["rpc_binary_search_estimate", "chainx-adaptor"] }
fc-rpc-core = { git = "https://github.com/chainx-org/frontier", branch = "polkadot-v0.9.18-btc-fix" }
fc-consensus  = { git = "https://github.com/chainx-org/frontier", branch = "polkadot-v0.9.18-btc-fix" }
fc-mapping-sync = { git = "https://github.com/chainx-org/frontier", branch = "polkadot-v0.9.18-btc-fix" }
fc-db = { git = "https://github.com/chainx-org/frontier", branch = "polkadot-v0.9.18-btc-fix" }
fp-consensus = { git = "https://github.com/chainx-org/frontier", branch = "polkadot-v0.9.18-btc-fix" }
fp-rpc = { git = "https://github.com/chainx-org/frontier", branch = "polkadot-v0.9.18-btc-fix" }
substrate-prometheus-endpoint = { git = "https://github.com/chainx-org/substrate", branch = "polkadot-v0.9.18-fix" }
sc-keystore = { git = "https://github.com/chainx-org/substrate", branch = "polkadot-v0.9.18-fix" }
