[package]
name = "chainx-service"
version = "5.2.2"
authors = ["The ChainX Authors"]
edition = "2021"

[dependencies]
futures = "0.3.17"

# Substrate client
sc-authority-discovery = { git = "https://github.com/chainx-org/substrate", branch = "polkadot-v0.9.18-fix2" }
sc-basic-authorship = { git = "https://github.com/chainx-org/substrate", branch = "polkadot-v0.9.18-fix2" }
sc-chain-spec = { git = "https://github.com/chainx-org/substrate", branch = "polkadot-v0.9.18-fix2" }
sc-client-api = { git = "https://github.com/chainx-org/substrate", branch = "polkadot-v0.9.18-fix2" }
sc-consensus = { git = "https://github.com/chainx-org/substrate", branch = "polkadot-v0.9.18-fix2" }
sc-consensus-babe = { git = "https://github.com/chainx-org/substrate", branch = "polkadot-v0.9.18-fix2" }
sc-consensus-slots = { git = "https://github.com/chainx-org/substrate", branch = "polkadot-v0.9.18-fix2" }
sc-consensus-uncles = { git = "https://github.com/chainx-org/substrate", branch = "polkadot-v0.9.18-fix2" }
sc-executor = { git = "https://github.com/chainx-org/substrate", branch = "polkadot-v0.9.18-fix2" }
sc-finality-grandpa = { git = "https://github.com/chainx-org/substrate", branch = "polkadot-v0.9.18-fix2" }
sc-network = { git = "https://github.com/chainx-org/substrate", branch = "polkadot-v0.9.18-fix2" }
sc-rpc = { git = "https://github.com/chainx-org/substrate", branch = "polkadot-v0.9.18-fix2" }
sc-transaction-pool = { git = "https://github.com/chainx-org/substrate", branch = "polkadot-v0.9.18-fix2" }
sc-telemetry = { git = "https://github.com/chainx-org/substrate", branch = "polkadot-v0.9.18-fix2" }
sc-service = { git = "https://github.com/chainx-org/substrate", branch = "polkadot-v0.9.18-fix2" }

sp-api = { git = "https://github.com/chainx-org/substrate", branch = "polkadot-v0.9.18-fix2" }
sp-authorship = { git = "https://github.com/chainx-org/substrate", branch = "polkadot-v0.9.18-fix2" }
sp-authority-discovery = { git = "https://github.com/chainx-org/substrate", branch = "polkadot-v0.9.18-fix2" }
sp-blockchain = { git = "https://github.com/chainx-org/substrate", branch = "polkadot-v0.9.18-fix2" }
sp-block-builder = { git = "https://github.com/chainx-org/substrate", branch = "polkadot-v0.9.18-fix2" }
sp-core = { git = "https://github.com/chainx-org/substrate", branch = "polkadot-v0.9.18-fix2" }
sp-consensus = { git = "https://github.com/chainx-org/substrate", branch = "polkadot-v0.9.18-fix2" }
sp-consensus-babe = { git = "https://github.com/chainx-org/substrate", branch = "polkadot-v0.9.18-fix2" }
sp-finality-grandpa = { git = "https://github.com/chainx-org/substrate", branch = "polkadot-v0.9.18-fix2" }
sp-inherents = { git = "https://github.com/chainx-org/substrate", branch = "polkadot-v0.9.18-fix2" }
sp-runtime = { git = "https://github.com/chainx-org/substrate", branch = "polkadot-v0.9.18-fix2" }
sp-timestamp = { git = "https://github.com/chainx-org/substrate", branch = "polkadot-v0.9.18-fix2" }
sp-transaction-pool = { git = "https://github.com/chainx-org/substrate", branch = "polkadot-v0.9.18-fix2" }
sp-offchain = { git = "https://github.com/chainx-org/substrate", branch = "polkadot-v0.9.18-fix2" }
sp-session = { git = "https://github.com/chainx-org/substrate", branch = "polkadot-v0.9.18-fix2" }

frame-system-rpc-runtime-api = { git = "https://github.com/chainx-org/substrate", branch = "polkadot-v0.9.18-fix2" }
pallet-transaction-payment-rpc-runtime-api = { git = "https://github.com/chainx-org/substrate", branch = "polkadot-v0.9.18-fix2" }

chainx-executor = { path = "../executor" }
chainx-primitives = { path = "../primitives" }
chainx-rpc = { path = "../rpc" }
chainx-runtime = { path = "../runtime/chainx" }
dev-runtime = { path = "../runtime/dev" }
malan-runtime = { path = "../runtime/malan" }

xpallet-assets-rpc-runtime-api = { path = "../xpallets/assets/rpc/runtime-api" }
xpallet-dex-spot-rpc-runtime-api = { path = "../xpallets/dex/spot/rpc/runtime-api" }
xpallet-gateway-bitcoin-rpc-runtime-api = { path = "../xpallets/gateway/bitcoin/rpc/runtime-api" }
xpallet-gateway-common-rpc-runtime-api = { path = "../xpallets/gateway/common/rpc/runtime-api" }
xpallet-gateway-records-rpc-runtime-api = { path = "../xpallets/gateway/records/rpc/runtime-api" }
xpallet-mining-asset-rpc-runtime-api = { path = "../xpallets/mining/asset/rpc/runtime-api" }
xpallet-mining-staking-rpc-runtime-api = { path = "../xpallets/mining/staking/rpc/runtime-api" }
xpallet-transaction-fee-rpc-runtime-api = { path = "../xpallets/transaction-fee/rpc/runtime-api" }
xpallet-btc-ledger-runtime-api = { path = "../xpallets/btc-ledger/rpc/runtime-api" }

# EVM
maplit = "1.0.2"
jsonrpc-pubsub = "18.0.0"
fc-rpc = { git = "https://github.com/chainx-org/frontier", branch = "polkadot-v0.9.18-btc-fix2", features = ["rpc_binary_search_estimate", "chainx-adaptor"] }
fc-rpc-core = { git = "https://github.com/chainx-org/frontier", branch = "polkadot-v0.9.18-btc-fix2" }
fc-consensus  = { git = "https://github.com/chainx-org/frontier", branch = "polkadot-v0.9.18-btc-fix2" }
fc-mapping-sync = { git = "https://github.com/chainx-org/frontier", branch = "polkadot-v0.9.18-btc-fix2" }
fc-db = { git = "https://github.com/chainx-org/frontier", branch = "polkadot-v0.9.18-btc-fix2" }
fp-consensus = { git = "https://github.com/chainx-org/frontier", branch = "polkadot-v0.9.18-btc-fix2" }
fp-rpc = { git = "https://github.com/chainx-org/frontier", branch = "polkadot-v0.9.18-btc-fix2" }
substrate-prometheus-endpoint = { git = "https://github.com/chainx-org/substrate", branch = "polkadot-v0.9.18-fix2" }
sc-keystore = { git = "https://github.com/chainx-org/substrate", branch = "polkadot-v0.9.18-fix2" }
