[package]
name = "xr-primitives"
version = "0.4.0"
authors = ["Chainpool <http://www.chainx.org>"]

[dependencies]
serde = { version = "1.0", optional = true }
integer-sqrt = "0.1.2"
num-traits = { version = "0.2", default-features = false }
parity-codec = { version = "2.1", default-features = false }

sr-std = { git = "https://github.com/chainpool/substrate", default_features = false }
sr-primitives = { git = "https://github.com/chainpool/substrate", default_features = false }
srml-support = { git = "https://github.com/chainpool/substrate", default_features = false }

[dev-dependencies]
serde_derive = "1.0"
parity-codec-derive = "2.1"

[features]
default = ["std"]
std = [
    "serde",
    "num-traits/std",
    "parity-codec/std",
    "sr-std/std",
    "sr-primitives/std",
    "srml-support/std"
]
api-for-runtime = []
