[package]
name = "xr-primitives"
version = "0.4.0"
authors = ["Chainpool <http://www.chainx.org>"]
edition = "2018"

[dependencies]
integer-sqrt = "0.1.2"
num-traits = { version = "0.2", default-features = false }
serde = { version = "1.0", optional = true }
parity-codec = { version = "3.3", default-features = false, features = ["derive"] }

rstd = { package = "sr-std", git = "https://github.com/chainpool/substrate", default-features = false }
runtime-io = { package = "sr-io", git = "https://github.com/chainpool/substrate", default-features = false }
runtime-primitives = { package = "sr-primitives", git = "https://github.com/chainpool/substrate", default-features = false }
support = { package = "srml-support", git = "https://github.com/chainpool/substrate", default-features = false }

[dev-dependencies]
serde_derive = "1.0"

[features]
default = ["std"]
std = [
    "num-traits/std",
    "serde",
    "parity-codec/std",
    "rstd/std",
    "runtime-io/std",
    "runtime-primitives/std",
    "support/std"
]
api-for-runtime = []
