[package]
name = "cxrml-financialrecords"
version = "0.1.0"
authors = ["Chainpool <https://www.chainx.org>"]

[dependencies]
hex-literal = "0.1.0"
serde = { version = "1.0", default_features = false }
serde_derive = { version = "1.0", optional = true }
safe-mix = { version = "1.0", default_features = false}
parity-codec = { version = "1.1", default_features = false }
parity-codec-derive = { version = "~1.0", default_features = false }
substrate-keyring = { git = "https://github.com/paritytech/substrate", optional = true }
substrate-primitives = { git = "https://github.com/paritytech/substrate", default_features = false }
sr-std = { git = "https://github.com/paritytech/substrate", default_features = false }
sr-io = { git = "https://github.com/paritytech/substrate", default_features = false }
sr-primitives = { git = "https://github.com/paritytech/substrate", default_features = false }
srml-support = { git = "https://github.com/paritytech/substrate", default_features = false }
srml-system = { git = "https://github.com/paritytech/substrate", default_features = false }
srml-balances = { git = "https://github.com/paritytech/substrate", default_features = false }

# cxrml module
cxrml-support = { path = "../support", default_features = false }
cxrml-tokenbalances = { path = "../tokenbalances", default_features = false }

[features]
default = ["std"]
std=[
    "serde/std",
    "serde_derive",
    "safe-mix/std",
    "parity-codec/std",
    "parity-codec-derive/std",
    "substrate-keyring",
    "substrate-primitives/std",
    "sr-std/std",
    "sr-io/std",
    "sr-primitives/std",
    "srml-support/std",
    "srml-system/std",
    "srml-balances/std",
    "cxrml-support/std",
    "cxrml-tokenbalances/std",
]