[package]
name = "frame-executive"
version = "2.0.0-rc6"
authors = ["Parity Technologies <admin@parity.io>"]
edition = "2018"
license = "Apache-2.0"
homepage = "https://substrate.dev"
repository = "https://github.com/paritytech/substrate/"
description = "FRAME executives engine"

[package.metadata.docs.rs]
targets = ["x86_64-unknown-linux-gnu"]

[dependencies]
codec = { package = "parity-scale-codec", version = "1.3.4", default-features = false, features = ["derive"] }
frame-support = { version = "2.0.0-rc6", default-features = false }
frame-system = { version = "2.0.0-rc6", default-features = false }
serde = { version = "1.0.101", optional = true }
sp-runtime = { version = "2.0.0-rc6", default-features = false }
sp-tracing = { version = "2.0.0-rc6", default-features = false }
sp-std = { version = "2.0.0-rc6", default-features = false }
sp-io = { version = "2.0.0-rc6", default-features = false }

xpallet-support = { path = "../../xpallets/support", default-features = false }

[dev-dependencies]
hex-literal = "0.2.1"
sp-core = { version = "2.0.0-rc6" }
sp-io ={ version = "2.0.0-rc6" }
pallet-indices = { version = "2.0.0-rc6" }
pallet-balances = { version = "2.0.0-rc6" }
pallet-transaction-payment = { version = "2.0.0-rc6" }
sp-version = { version = "2.0.0-rc6" }

[features]
default = ["std"]
std = [
	"codec/std",
	"frame-support/std",
	"frame-system/std",
	"serde",
	"sp-runtime/std",
	"sp-tracing/std",
	"sp-std/std",

	"xpallet-support/std"
]
