[package]
name = "xp-assets-registrar"
version = "2.0.9"
authors = ["The ChainX Authors"]
edition = "2018"

[dependencies]
codec = { package = "parity-scale-codec", version = "2.0.0", features = ["derive"], default-features = false }
serde = { version = "1.0", features = ["derive"], optional = true }
impl-trait-for-tuples = "0.2.1"

# Substrate primitives
sp-runtime = { version = "3.0.0", default-features = false }
sp-std = { version = "3.0.0", default-features = false }

# ChainX primitives
chainx-primitives = { path = "../../primitives", default-features = false }

[features]
default = ["std"]
std = [
    "codec/std",
    "serde",
    # Substrate primitives
    "sp-runtime/std",
    # ChainX primitives
    "chainx-primitives/std",
]
