[package]
name = "xp-assets-registrar"
version = "5.2.0"
authors = ["The ChainX Authors"]
edition = "2021"

[dependencies]
codec = { package = "parity-scale-codec", version = "3.0.0", default-features = false }
serde = { version = "1.0", features = ["derive"], optional = true }
scale-info = { version = "2.0.1", default-features = false, features = ["derive"] }
impl-trait-for-tuples = "0.2.1"

# Substrate primitives
sp-runtime = { git = "https://github.com/chainx-org/substrate", branch = "polkadot-v0.9.18", default-features = false }
sp-std = { git = "https://github.com/chainx-org/substrate", branch = "polkadot-v0.9.18", default-features = false }

# ChainX primitives
chainx-primitives = { path = "../../primitives", default-features = false }

[features]
default = ["std"]
std = [
    "codec/std",
    "serde",
    "scale-info/std",
    # Substrate primitives
    "sp-runtime/std",
    # ChainX primitives
    "chainx-primitives/std",
]
