[package]
name = "xp-genesis-builder"
version = "2.0.0-alpha.0"
authors = ["The ChainX Authors"]
edition = "2018"

[dependencies]
serde = { version = "1.0", features = ["derive"], optional = true }

# ChainX primitives
chainx-primitives = { path = "../../primitives", default-features = false }

# ChainX pallets
xpallet-support = { path = "../../xpallets/support", default-features = false }

[features]
default = ["std"]
std = [
    "serde/std",
    # ChainX primitives
    "chainx-primitives/std",
    # ChainX pallets
    "xpallet-support/std",
]
