[package]
name = "xp-genesis-builder"
version = "5.0.0"
authors = ["The ChainX Authors"]
edition = "2021"

[dependencies]
serde = { version = "1.0", features = ["derive"], optional = true }

# ChainX primitives
chainx-primitives = { path = "../../primitives", default-features = false }
xp-rpc = { path = "../../primitives/rpc", optional = true }

[features]
default = ["std"]
std = [
    "serde",
    # ChainX primitives
    "chainx-primitives/std",
    "xp-rpc",
]
