[package]
name = "xp-io"
version = "2.0.6"
authors = ["The ChainX Authors"]
edition = "2018"

[dependencies]
codec = { package = "parity-scale-codec", version = "1.3.4", default-features = false }

# Substrate primitives
sp-core = { version = "2.0.0", default-features = false }
sp-runtime = { version = "2.0.0", default-features = false }
sp-runtime-interface = { version = "2.0.0", default-features = false }

[dev-dependencies]
hex = "0.4"

[features]
default = ["std"]
std = [
    "codec/std",
    # Substrate primitives
    "sp-core/std",
    "sp-runtime/std",
    "sp-runtime-interface/std",
]
