[package]
name = "xp-io"
version = "4.1.1"
authors = ["The ChainX Authors"]
edition = "2018"

[dependencies]
codec = { package = "parity-scale-codec", version = "2.3.1", default-features = false }

# Substrate primitives
sp-core = { git = "https://github.com/paritytech/substrate", branch = "polkadot-v0.9.11", default-features = false }
sp-runtime = { git = "https://github.com/paritytech/substrate", branch = "polkadot-v0.9.11", default-features = false }
sp-runtime-interface = { git = "https://github.com/paritytech/substrate", branch = "polkadot-v0.9.11", default-features = false }

[dev-dependencies]
hex = "0.4"

[features]
default = ["std"]
std = [
    "codec/std",
    # Substrate primitives
    "sp-core/std",
    "sp-runtime/std",
    "sp-runtime-interface/std",
]
