[package]
name = "xp-protocol"
version = "2.0.9"
authors = ["The ChainX Authors"]
edition = "2018"

[dependencies]
codec = { package = "parity-scale-codec", version = "2.3.1", features = ["derive"], default-features = false }
serde = { version = "1.0", features = ["derive"], optional = true }

# Substrate primitives
sp-runtime = { git = "https://github.com/paritytech/substrate", branch = "polkadot-v0.9.11", default-features = false }

# ChainX primitives
chainx-primitives = { path = "..", default-features = false }

[features]
default = ["std"]
std = [
    "codec/std",
    "serde",
    # Substrate primitives
    "sp-runtime/std",
    # ChainX primitives
    "chainx-primitives/std",
]
